--- a/retroactive-frontend/src/components/TopUpPage.css
+++ b/retroactive-frontend/src/components/TopUpPage.css
@@ -1,53 +1,55 @@
-/* TopUpPage Specific Styles */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .top-up-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-  }
-  
-  .top-up-bubble {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 20px;
-    margin: 10px 0;
-    width: 50%;
-    text-align: center;
-  }
-  
-  .title-bubble {
-    background-color: #007bff;
-    color: #fff;
-  }
-  
-  .form-group {
-    margin: 10px 0;
-  }
-  
-  input, select {
-    padding: 10px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  .status-message {
-    margin-top: 10px;
-    color: green;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+
+.top-up-bubble {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 10px 0;
+  width: 50%;
+  text-align: center;
+}
+
+.title-bubble {
+  background-color: #00b87e86;
+  color: #fff;
+}
+
+.form-group {
+  margin: 10px 0;
+}
+
+input, select {
+  padding: 10px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #00b87e86;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #00b87e86;
+}
+
+.status-message {
+  margin-top: 10px;
+  color: green;
+}
