--- a/retroactive-frontend/src/index.css
+++ b/retroactive-frontend/src/index.css
@@ -36,9 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url('assets/background.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
+  background-image: url("assets/background.jpg");
 }
 
 h1 {
